--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,34 @@
 *{
-    background-image: url(content/bg.jpg);
     
 }
-
+.bg{
+    background-image: url(content/bg.jpg);
+}
+h2{
+    color: #DFE217;
+    background-color: slategrey ;
+}
 p{
     color: #DFE217;
+    background-color: slategrey ;
 }
-
+.title{
+    text-align: center;
+}
 label {
-
-
     color: #DFE217;
-  
-  
   }
+
+  .flex{
+    display: flex;
+    align-items:center ;
+    flex-direction: column;
+  }
+  .flex div{
+    align-items: center;
+  }
+  
+   .flexI{
+    margin:22px;
+   
+   }
